glyph icon slider

--- a/Slider.MVC.WebApplication2/Views/Home/Index.cshtml
+++ b/Slider.MVC.WebApplication2/Views/Home/Index.cshtml
@@ -7,7 +7,11 @@
 <div class="jumbotron">
 
     @Html.Partial("_Slider");
+    <hr />
     @Html.Partial("_Slider2");
+    <hr />
+
+    @Html.Partial("_Slider3");
 
 </div>
 
