--- a/Slider.MVC.WebApplication2/Views/Shared/_Slider.cshtml
+++ b/Slider.MVC.WebApplication2/Views/Shared/_Slider.cshtml
@@ -3,24 +3,18 @@
 
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-
-        </ol>
-
+     
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
 
             <div class="item active">
                 
-                <img src="~/IMG/1.png" alt="Los Angeles" style="width:100%;">
+                <img src="~/IMG/1.png" >
 
             </div>
 
             <div class="item">
-                <img src="~/IMG/2.png" alt="Chicago" style="width:100%;">
+                <img src="~/IMG/2.png" >
 
             </div>
 
