--- a/Slider.MVC.WebApplication2/Views/Shared/_Slider2.cshtml
+++ b/Slider.MVC.WebApplication2/Views/Shared/_Slider2.cshtml
@@ -1,15 +1,17 @@
-﻿<div id="NDRCarousel" class="carousel slide" data-ride="carousel">
+﻿
+
+<div id="NDRCarousel" class="carousel slide" data-ride="carousel">
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
 
-        <div class="carousel-item active">
+        <div class="item active">
 
             <img src="~/IMG/1.png">
 
         </div>
 
-        <div class="carousel-item">
+        <div class="item">
             <img src="~/IMG/2.png">
 
         </div>
@@ -17,11 +19,12 @@
     </div>
 
     <!-- Left and right controls -->
-    <a class="carousel-control-prev" href="#NDRCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-
+    <a class="left carousel-control" href="#NDRCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#NDRCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
+    <a class="right carousel-control" href="#NDRCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
     </a>
 </div>
