--- a/Slider.MVC.WebApplication2/Views/Home/Index.cshtml
+++ b/Slider.MVC.WebApplication2/Views/Home/Index.cshtml
@@ -6,6 +6,10 @@
 
 <div class="jumbotron">
 
+    <asp:Button runat="server" Text="Button">
+        aaa
+    </asp:Button>
+
     @Html.Partial("_Slider");
     <hr />
     @Html.Partial("_Slider2");
