--- a/Slider.MVC.WebApplication2/Views/Shared/_Layout.cshtml
+++ b/Slider.MVC.WebApplication2/Views/Shared/_Layout.cshtml
@@ -5,18 +5,18 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-
+    <link href="~/Content/font-awesome.css" rel="stylesheet" />
 
 </head>
 <body>
-
+    
     @Html.Partial("_MenuBar");
 
     <div class="container body-content">
-
+       
         @RenderBody()
         <hr />
-      
+
     </div>
 
 </body>
