--- a/Slider.MVC.WebApplication2/Views/Shared/_Slider3.cshtml
+++ b/Slider.MVC.WebApplication2/Views/Shared/_Slider3.cshtml
@@ -26,7 +26,7 @@
     </div>
 
     <a class="left carousel-control" href="#CapCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
+        <i class="fa-chevron-right"></i>
         <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#CapCarousel" data-slide="next">
